# xEHM

./: README.md  requirements.txt  setup.cfg  setup.py  srcinstall.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: analysis_components.md
src/xehm/: __init__.py  _distributions.py  _exceptions.py  _history_matching.py  _sample.py  _variables.py  accelerated_hm.py  simulator.py  space_descriptor.py
src/xehm/app/: plotter.py  run_cli.py
src/xehm/clustering/: __init__.py  classifier.py  hierarchical_density.py  xmeans.py
src/xehm/designs/: __init__.py  _default_designer.py  _designer.py
src/xehm/diagnostics/: __init__.py  _leave_one_out.py  custom_diagnostic.py  elementary_constraints.py  ignore_diagnostics.py
src/xehm/emulators/: __init__.py  emulator.py  gaussian_process.py
src/xehm/graphics/: __init__.py  figure_controls.py  plotting_diagnostics.py  plotting_emulation.py  plotting_nroy.py
src/xehm/sampling/: __init__.py  metropolis_sampler.py  rejection_sampler.py  samplers.py
src/xehm/utils/: __init__.py  bayesian.py  console.py  hypercubes.py  numpy_tools.py  plugin.py  serialisation.py  spline_fits.py  transforms.py
tests/: test_hm_1x1.py  test_rejection_sampler.py  test_samplers.py  test_utils_hypercubes.py
tutorials/: demo_hm_1d.py  demo_hm_2d.py  demo_implausibility.py  tutorial_1_implausibility.py
tutorials/basics/: README.md  demo_hm_1d.py  demo_hm_2d.py
tutorials/customising/: README.md  plugin_diagnostic.py
tutorials/customising/custom_diagnostics/: custom_diagnostics.py  plugin_diagnostic.py
(+3 files in other folders)
