[metadata]
name = xehm
version = 0.0.1
description = Evolutionary History Matching
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
author = Christopher Fenton
author_email = cjf_uk@hotmail.com
url = https://github.com/fentonscode/xEHM
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only

[entry_points]
console_scripts =
  xehm = xehm.app.run:main

[options]
python_requires = >=3.7
package_dir = =src
packages = find:

[options.packages.find]
where = src
